# cached_method

./: LICENSE  README.md  cached_method.py  pyproject.toml
tests/: test_cached_method.py
